# GAMES101Homework

./: CMakeLists.txt  README.md  main.cpp
Assignment0/: CMakeLists.txt
Assignment0/include/: assignment0.h
Assignment0/src/: assignment0.cpp
Assignment1/: CMakeLists.txt
Assignment1/src/: Triangle.hpp  main.cpp  rasterizer.hpp
